test: category 추가에 따른 기존 테스트 수정