@@ -18,6 +18,7 @@ import gift.exception.product.ProductNotFoundException;
 import gift.exception.wish.DuplicateWishException;
 import gift.exception.wish.PermissionDeniedException;
 import gift.exception.wish.WishNotFoundException;
+import gift.model.Category;
 import gift.model.Member;
 import gift.model.Product;
 import gift.model.Wish;
@@ -57,11 +58,12 @@ public class WishServiceTest {
     @Test
     @DisplayName("위시리스트에 상품 추가 성공 테스트")
     public void testAddWishSuccess() {
+        Category category = new Category("Category", "#000000", "imageUrl", "description");
         Member member = new Member(1L, "test@example.com", "password");
         MemberResponse memberResponse = new MemberResponse(1L, "test@example.com", null);
-        ProductResponse productResponse = new ProductResponse(1L, "Product", 100, "imageUrl");
+        ProductResponse productResponse = new ProductResponse(1L, "Product", 100, "imageUrl", category.getId(), category.getName());
         Product product = new Product(productResponse.id(), productResponse.name(),
-            productResponse.price(), productResponse.imageUrl());
+            productResponse.price(), productResponse.imageUrl(), category);
 
         when(memberService.getMemberById(1L)).thenReturn(memberResponse);
         when(productService.getProductById(1L)).thenReturn(productResponse);
@@ -96,10 +98,11 @@ public class WishServiceTest {
     @Test
     @DisplayName("위시리스트에 이미 존재하는 상품 추가 시도")
     public void testAddWishDuplicate() {
+        Category category = new Category("Category", "#000000", "imageUrl", "description");
         Member member = new Member(1L, "test@example.com", "password");
         MemberResponse memberResponse = new MemberResponse(1L, "test@example.com", null);
-        Product product = new Product(1L, "Product", 100, "imageUrl");
-        ProductResponse productResponse = new ProductResponse(1L, "Product", 100, "imageUrl");
+        Product product = new Product(1L, "Product", 100, "imageUrl", category);
+        ProductResponse productResponse = new ProductResponse(1L, "Product", 100, "imageUrl", category.getId(), category.getName());
 
         when(memberService.getMemberById(1L)).thenReturn(memberResponse);
         when(productService.getProductById(1L)).thenReturn(productResponse);
@@ -118,8 +121,9 @@ public class WishServiceTest {
     @Test
     @DisplayName("위시리스트에서 상품 삭제 성공 테스트")
     public void testDeleteWishSuccess() {
+        Category category = new Category("Category", "#000000", "imageUrl", "description");
         Member member = new Member(1L, "test@example.com", "password");
-        Product product = new Product(1L, "Product", 100, "imageUrl");
+        Product product = new Product(1L, "Product", 100, "imageUrl", category);
         Wish wish = new Wish(1L, member, product);
 
         when(wishRepository.findById(1L)).thenReturn(Optional.of(wish));
@@ -142,8 +146,9 @@ public class WishServiceTest {
     @Test
     @DisplayName("위시리스트에서 다른 사용자의 상품 삭제 시도")
     public void testDeleteWishPermissionDenied() {
+        Category category = new Category("Category", "#000000", "imageUrl", "description");
         Member member = new Member(1L, "test@example.com", "password");
-        Product product = new Product(1L, "Product", 100, "imageUrl");
+        Product product = new Product(1L, "Product", 100, "imageUrl", category);
         Wish wish = new Wish(1L, member, product);
 
         when(wishRepository.findById(1L)).thenReturn(Optional.of(wish));
@@ -158,8 +163,9 @@ public class WishServiceTest {
     @Test
     @DisplayName("회원의 위시리스트 조회 테스트 (페이지네이션 적용)")
     public void testGetWishlistByMemberId() {
+        Category category = new Category("Category", "#000000", "imageUrl", "description");
         Member member = new Member(1L, "test@example.com", "password");
-        Product product = new Product(1L, "Product", 100, "imageUrl");
+        Product product = new Product(1L, "Product", 100, "imageUrl", category);
         Wish wish = new Wish(1L, member, product);
         Pageable pageable = PageRequest.of(0, 10);
         when(wishRepository.findAllByMember_Id(1L, pageable))
@@ -167,7 +173,7 @@ public class WishServiceTest {
 
         Page<WishResponse> wishlist = wishService.getWishlistByMemberId(1L, pageable);
         assertEquals(1, wishlist.getTotalElements());
-        assertEquals(1L, wishlist.getContent().getFirst().memberId());
-        assertEquals(1L, wishlist.getContent().getFirst().productId());
+        assertEquals(1L, wishlist.getContent().get(0).memberId());
+        assertEquals(1L, wishlist.getContent().get(0).productId());
     }
 }
